# smart-factory-rag

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/api/: main.py
src/ml/: predictor.py
src/rag/: answer.py  engine.py  indexer.py
src/sensors/: ingester.py
tests/: conftest.py  test_answer_agent.py  test_core.py
