[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-factory-rag"
version = "1.0.0"
description = "Intelligent Manufacturing Assistant — RAG + Predictive Maintenance + Sensor Fusion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Konstantinos Zervakis", email = "zervakisai@gmail.com" }]
keywords = ["rag", "manufacturing", "predictive-maintenance", "iot", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Answer generation is a typed Pydantic AI agent (replaces the langchain ChatAnthropic chain).
    "pydantic-ai>=1.0,<2",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "torch>=2.2.0",
    "lightgbm>=4.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "aiomqtt>=2.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "locust>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
